# library_management

./: main.py  pyproject.toml
config/: config_bd.py
models/: author_models.py  book_models.py
routers/: author_router.py  book_router.py
schemas/: author_schema.py  book_schema.py
services/: author_service.py  book_service.py
